welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:16: error: reassignment to val
	nbeff = nbeff + 1 
              ^